<resources>
    <string name="app_name">Demo Simple Click</string>
    <string name="enter">Enter Something</string>
    <string name="show">Display what user entered </string>
    <string name="display">Display</string>
    <string name="disabled">disabled</string>
    <string name="enabled">enabled</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="toggleButton">ToggleButton</string>
</resources>